--- a/src/Components/Interactive/Interactive.css
+++ b/src/Components/Interactive/Interactive.css
@@ -1,6 +1,26 @@
 .large-button {
+  position: relative;
   display: grid;
+  z-index: 1;
   place-items: center;
   padding: 0 2em;
   aspect-ratio: 1;
+}
+
+.large-button::after {
+  content: "";
+  position: absolute;
+  background-color: hsl(var(--clr-white) / 0.15);
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+  opacity: 1;
+  transform: scale(1.5);
 }
